bin: adds sb-ch to create hook

--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.1",
   "description": "CLI tools for SaraWebs dev workflow",
   "bin": {
-    "sb-cc": "bin/sb-cc.js"
+    "sb-cc": "bin/sb-cc.js",
+    "sb-ch": "bin/sb-ch.js"
   },
   "scripts": {
     "format": "npx prettier --write ."
