--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "1.0.3",
   "description": "CLI tools for SaraWebs dev workflow",
   "bin": {
-    "sb-cc": "bin/sb-cc.js",
-    "sb-ch": "bin/sb-ch.js"
+    "sb-gen": "bin/sb-gen.js"
   },
   "scripts": {
     "format": "npx prettier --write ."
