--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "CLI tools for SaraWebs dev workflow",
   "bin": {
     "sb-gen": "bin/sb-gen.js",
-    "sb-gen-api": "bin/sb-gen-api.sh",
-    "sb-gen-server": "bin/sb-gen-server.sh"
+    "sb-gen-api": "bin/sb-gen-api.js",
+    "sb-gen-server": "bin/sb-gen-server.js"
   },
   "scripts": {
     "format": "npx prettier --write ."
@@ -18,6 +18,12 @@
   },
   "publishConfig": {
     "access": "public"
+  },
+  "dependencies": {
+    "ejs": "^3.1.10",
+    "fs-extra": "^11.2.0",
+    "sb-crud-gen": "^1.0.9",
+    "yargs": "^18.0.0"
   },
   "keywords": [
     "bin",
